// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary for multiple expenses 1`] = `
<div>
  Viewing 3 expenses totalling $1,996.95
</div>
`;

exports[`should render summary for single expense 1`] = `
<div>
  Viewing 1 expense totalling $1.95
</div>
`;
